# pine-script-validator

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/pinescript_validator/: __init__.py  agent_report.py  ast.py  ast_validator.py  audit.py  cli.py  data_loader.py  diagnostics.py  lexer.py  parser.py  pattern_validator.py  sarif.py  validator.py
src/pinescript_validator/data/: function_specs.json  namespace_constants.json
tests/: test_audit.py  test_pine_v6_docs_cases.py  test_validator.py
